unpackaged/main/default/objects/icatp__File_Slayer_Usage__c/icatp__File_Slayer_Usage__c.object-meta.xml
<CustomObject>
    <label>File Slayer Usage</label>
    <nameField>
        <label>File Slayer Usage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>File Slayer Usage</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>