unpackaged/main/default/objects/icatp__File_Slayer_Usage__c/fields/icatp__Duplicate_Files_Deleted_Count__c.field-meta.xml
<CustomField>
    <fullName>icatp__Duplicate_Files_Deleted_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Duplicate Files Deleted (Count)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>