unpackaged/main/default/objects/icatp__File_Slayer_Usage__c/fields/icatp__End_Date__c.field-meta.xml
<CustomField>
    <fullName>icatp__End_Date__c</fullName>
    <label>End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>