unpackaged/main/default/objects/icatp__File_Slayer_Usage__c/fields/icatp__Files_Slain_Total_Count__c.field-meta.xml
<CustomField>
    <fullName>icatp__Files_Slain_Total_Count__c</fullName>
    <formula>icatp__Files_Slain_via_Component_Count__c + icatp__Files_Slain_via_Hit_List_Count__c + icatp__Files_Slain_via_Hit_List_Manager_Count__c + icatp__Files_Slain_Retroactively_Count__c + icatp__Files_Slain_via_Slaybot_Count__c + icatp__Duplicate_Files_Deleted_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Files Slain Total (Count)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>