unpackaged/main/default/objects/icatp__File_Slayer_Usage__c/fields/icatp__Files_Slain_Total_Size__c.field-meta.xml
<CustomField>
    <fullName>icatp__Files_Slain_Total_Size__c</fullName>
    <formula>icatp__Files_Slain_via_Component_Size__c + icatp__Files_Slain_via_Hit_List_Size__c + icatp__Files_Slain_via_Hit_List_Manager_Size__c + icatp__Files_Slain_Retroactively_Size__c + icatp__Files_Slain_via_Slaybot_Size__c + icatp__Duplicate_Files_Deleted_Size__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Files Slain Total (Size)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>