unpackaged/main/default/objects/icatp__File_Slayer_Usage__c/fields/icatp__Files_Slain_via_Component_Count__c.field-meta.xml
<CustomField>
    <fullName>icatp__Files_Slain_via_Component_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Files Slain via Component (Count)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>