unpackaged/main/default/objects/icatp__File_Slayer_Usage__c/fields/icatp__Files_Slain_via_Hit_List_Manager_Size__c.field-meta.xml
<CustomField>
    <fullName>icatp__Files_Slain_via_Hit_List_Manager_Size__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Files Slain via Hit List Manager (Size)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>