unpackaged/main/default/objects/icatp__File_Slayer_Usage__c/fields/icatp__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>icatp__Start_Date__c</fullName>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>