unpackaged/main/default/objects/icatp__File_Slayer_Usage__c/listViews/icatp__All.listView-meta.xml
<ListView>
    <fullName>icatp__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>